[UPDATE] admi logic